--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/niazin/CCF-Assignment"
+  "homepage": "https://github.com/niazin/CCF-Assignment",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  }
 }
