--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,11 @@ jobs:
     # Clean up after deployment
     - name: Clean up
       run: rm -rf build
+      # Step to deploy to GitHub Pages
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_branch: gh-pages  # Branch where the files will be deployed
+        folder: build            # Folder to deploy (e.g., 'build' after running npm run build)
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub automatically provides this secret
