--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,10 @@ jobs:
     - name: Clean up
       run: rm -rf build
     - name: Deploy to GitHub Pages
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Using the token stored in GitHub Secrets
       run: |
-        npx gh-pages -d build -r "https://github.com/${{ github.repository }}.git" -u "https://${GH_TOKEN}@github.com/${{ github.repository }}.git"
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        npx gh-pages -d build -r "https://${GH_TOKEN}@github.com/${{ github.repository }}.git" -u
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass GITHUB_TOKEN securely
+
