--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,8 @@ jobs:
       run: rm -rf build
     - name: Deploy to GitHub Pages
       run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+        git config --global user.name "niazin"
+        git config --global user.email "nafise.niazi@gmail.com"
         npx gh-pages -d build -r "https://${GH_TOKEN}@github.com/${{ github.repository }}.git" -u
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass GITHUB_TOKEN securely
