--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,6 @@
 #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass GITHUB_TOKEN securely
 
 
-
-
 name: Deploy React App to GitHub Pages
 
 on:
@@ -61,9 +59,12 @@ on:
     branches:
       - main  # This can be 'master' or 'main', depending on your default branch
 
+permissions:
+  contents: write  # Grant required permissions
+
 jobs:
   build:
-    runs-on: ubuntu-latest  # Specifies the virtual environment for the job
+    runs-on: ubuntu-latest
 
     steps:
       # Checkout the code
@@ -80,7 +81,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'  # Use Node.js version 16 or any version you need
+          node-version: '16'
         
       # Install dependencies
       - name: Install dependencies
@@ -96,11 +97,10 @@ jobs:
     
       # Deploy to GitHub Pages using gh-pages
       - name: Deploy to GitHub Pages
-        run: |
-          npx gh-pages -d build -r "https://$GH_TOKEN@github.com/${{ github.repository }}.git"
+        run: npx gh-pages -d build -r "https://github.com/${{ github.repository }}"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass GITHUB_TOKEN securely
-
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
       # Clean up after deployment (optional)
       - name: Clean up
         run: rm -rf build
